--- a/app/globals.css
+++ b/app/globals.css
@@ -14,6 +14,13 @@
   }
 }
 
+html, body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  overflow: auto;
+}
+
 body {
   color: var(--foreground);
   background: var(--background);
